@@ -1,3 +1,8 @@
+2011-06-12  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* gas/i386/arch-10-lzcnt.d: Updated.
+	* gas/i386/x86-64-arch-2-lzcnt.d: Likewise.
+
 2011-06-10  H.J. Lu  <hongjiu.lu@intel.com>
 
 	AVX Programming Reference (June, 2011)
